--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -26,23 +26,23 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href="https://docs.google.com/document/d/1t31XtKqvTwIF9UPtYcyjFa9-WkKPoQgcxXxMfE8rbKc/edit?usp=sharing" target="_blank" >Brain Write</a>
                     <a class="dropdown-item" href="https://www.figma.com/file/9eItLJPgtgRwK6GugaUwrl/Unique-Planner?node-id=0%3A1g" target="_blank" >Figma Wireframe</a>
                     <a class="dropdown-item" href="https://github.com/NastyEthan/flask_portfolio/commit/6e82d0aa8279dfd8a3a561c14f798c67f4d6bdd7" target="_blank">Greet Commit</a>
-                    <a class="dropdown-item" href={{ url_for('binary') }}>Binary</a>
-                    <a class="dropdown-item" href={{ url_for('binary2') }}>Binary2</a>
-                    <a class="dropdown-item" href={{ url_for('binary3') }}>Binary3</a>
-                    <a class="dropdown-item" href={{ url_for('binary4') }}>Binary4</a>
-                    <a class="dropdown-item" href={{ url_for('logic') }}>Logic Gates</a>
-                    <a class="dropdown-item" href={{ url_for('colorcode2') }}>Color Code</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/binary">Binary</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/binary2">Binary2</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/binary3">Binary3</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/binary4">Binary4</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/logic">Logic Gates</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/colorcode2">Color Code</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     APIs
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href={{ url_for('joke') }}>Joke</a>
-                    <a class="dropdown-item" href={{ url_for('jokes') }}>Jokes</a>
-                    <a class="dropdown-item" href={{ url_for('covid19') }}>COVID 19</a>
-                    <a class="dropdown-item" href={{ url_for('weatherapi2') }}>Weather</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/joke">Joke</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/jokes">Jokes</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/covid19">COVID 19</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/weatherapi2">Weather</a>
                 </div>
             </li>
         </ul>
