--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -31,6 +31,8 @@
             font-size: 90px;
         }
         table {
+            margin-top: 20px;
+            margin-bottom: 20px;
             width: fit-content;
             overflow-wrap: anywhere;
             font-family: Raleway;
@@ -38,12 +40,12 @@
 
         }
         th, td{
-            border: 5px solid black;
+            border: 3px solid black;
             column-rule: 4px dotted rgb(79, 185, 227);
 
         }
         .btn{
-            border: 5px solid black;
+            border: 2px solid black;
             font-family: Raleway;
         }
     </style>
