linked weather api to planner 3 (personal), added time with api (to school planner 4)

--- a/templates/planner4.html
+++ b/templates/planner4.html
@@ -71,6 +71,8 @@
 <div style="margin-left: 50px; margin-right: 50px">
     <h1>PLANNER</h1>
     <p>This is the project's <i>WEEKLY</i> schedule - <b>a daily planner structured on a weekly basis.</b></p>
+    {{mytime['LocalTime_Now']}}
+<!--    time API code above-->
 
     <a href="http://127.0.0.1:5000/planner3/" class="btn">Monthly Calendar</a>
 
