--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -138,28 +138,28 @@
              <td><span id="onlyrow"></span> </td>
         </tr>
     </table>
-    <table>  <!--  new table that is created for events -->
-        <tr>   <!--  table header for 3 seperate events-->
-            <th bgcolor="#00bfff"> Birthday </th>
-            <th bgcolor="red"> Urgent Task </th>
-            <th bgcolor="yellow"> Exam in this month </th>
-        </tr>
+<!--    <table>  &lt;!&ndash;  new table that is created for events &ndash;&gt;-->
+<!--        <tr>   &lt;!&ndash;  table header for 3 seperate events&ndash;&gt;-->
+<!--            <th bgcolor="#00bfff"> Birthday </th>-->
+<!--            <th bgcolor="red"> Urgent Task </th>-->
+<!--            <th bgcolor="yellow"> Exam in this month </th>-->
+<!--        </tr>-->
 
-        {% for image in eventimages %} <!--  for loop for iteration(image  -->
-            <td>
-                <img class="img-responsive py-3" id=img{{loop.index}} alt="" width="256" height="Auto" src="{{image.base64_GRAY}}" > <!--  default is gray   -->
-                <!-- Hack: create button (btn{{loop.index}} to  call java script function
-                       pass index to allow you to toggle images with hidden id's
-                       {{image.base64}}  original image
-                       {{image.base64_GRAY}}  gray scale image
-                    -->
-                <button style="background-color: mediumspringgreen; border-color: rebeccapurple; color: mediumblue" onclick="changeImage('{{loop.index}}')">Toggle Event!</button>
-                <!--  changes from gray to color when using button  -->
-                <p hidden id="img_orig{{loop.index}}">{{image.base64}}</p> <!--  loops the images   -->
-                <p hidden id="img_gray{{loop.index}}">{{image.base64_GRAY}}</p>
-            </td>
-        {% endfor %}
-    </table>
+<!--        {% for image in eventimages %} &lt;!&ndash;  for loop for iteration(image  &ndash;&gt;-->
+<!--            <td>-->
+<!--                <img class="img-responsive py-3" id=img{{loop.index}} alt="" width="256" height="Auto" src="{{image.base64_GRAY}}" > &lt;!&ndash;  default is gray   &ndash;&gt;-->
+<!--                &lt;!&ndash; Hack: create button (btn{{loop.index}} to  call java script function-->
+<!--                       pass index to allow you to toggle images with hidden id's-->
+<!--                       {{image.base64}}  original image-->
+<!--                       {{image.base64_GRAY}}  gray scale image-->
+<!--                    &ndash;&gt;-->
+<!--                <button style="background-color: mediumspringgreen; border-color: rebeccapurple; color: mediumblue" onclick="changeImage('{{loop.index}}')">Toggle Event!</button>-->
+<!--                &lt;!&ndash;  changes from gray to color when using button  &ndash;&gt;-->
+<!--                <p hidden id="img_orig{{loop.index}}">{{image.base64}}</p> &lt;!&ndash;  loops the images   &ndash;&gt;-->
+<!--                <p hidden id="img_gray{{loop.index}}">{{image.base64_GRAY}}</p>-->
+<!--            </td>-->
+<!--        {% endfor %}-->
+<!--    </table>-->
 <body>
 <p id = "GOTOSTUDY" style ="font-size: 16px; font-weight: bold;">
 </p>
@@ -242,3 +242,5 @@
     <!--    </a>-->
     <a class="btn btn-primary" href="http://127.0.0.1:5000/binarytoplanner/">Want to take a quick break from studying and talk to your friends in binary? Click here!</a>
 </div>
+    <a class="btn btn-outline-primary btn-lg btn-block" href="http://127.0.0.1:5000/weatherapi2/">What to wear...</a>
+    </div>
