--- a/templates/planner4.html
+++ b/templates/planner4.html
@@ -37,6 +37,7 @@
             /*column-rule: 4px dotted rgb(79, 185, 227);*/
         }
         th, td{
+            font-family: Raleway;
             border: 3px solid black;
             column-rule: 4px dotted rgb(79, 185, 227);
             padding: 10px;
@@ -71,8 +72,6 @@
 <div style="margin-left: 50px; margin-right: 50px">
     <h1>PLANNER</h1>
     <p>This is the project's <i>WEEKLY</i> schedule - <b>a daily planner structured on a weekly basis.</b></p>
-    {{mytime['LocalTime_Now']}}
-<!--    time API code above-->
 
     <a href="http://127.0.0.1:5000/planner3/" class="btn">Monthly Calendar</a>
 
@@ -109,10 +108,16 @@
     <iframe id="songs" src="about:blank" width="100%" height="280" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
     <script>
+        function colorChange(id) {
+            let cell = "cell" + id;
+            document.getElementById(cell).style.backgroundColor = conversion(id);
+        }
+
         // converting string to hex
         function conversion(id) {
             const task = "task" + id;
-            let text = document.getElementById(task).value;
+            sessionStorage.setItem(task, document.getElementById(task).value);
+            let text = sessionStorage.getItem(task);
             let short = text.slice(0,4) // slices long strings to just 4 characters
             let arr1 = [];
             for (let n = 0, l = short.length; n < l; n ++)
@@ -124,10 +129,7 @@
         }
 
         // changes cell background color to the hex from conversion()
-        function colorChange(id) {
-            let cell = "cell" + id;
-            document.getElementById(cell).style.backgroundColor = conversion(id);
-        }
+
 
         // displaying user input for their tasks
         function display(id) {
@@ -139,19 +141,21 @@
             // whether or not checkbox is toggled, and uses color based on result
             let checked = document.getElementById("color").checked
             if ( checked ) {
-                colorChange(id);
-                sessionStorage.check = "yes"
+                colorChange(id)
             }
         }
 
         function check() {
-            for ( let i = 1; i < 8; i++ ) {
+            for (let i = 1; i < 8; i++) {
                 const task = "task" + i;
                 const show_input = "show_input" + i
-                if ( sessionStorage.getItem(task) !== null) {
+                if (typeof sessionStorage.getItem(task) !== null) {
                     document.getElementById(show_input).innerHTML = sessionStorage.getItem(task);
                 }
             }
+            // if ( sessionStorage.color === true ) {
+            //     colorChange(id);
+            // }
         }
 
         function remove(id) {
