--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+{% block body %}
+
+{% set data = my30day.data %}
 <html>
 <head>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -28,7 +32,7 @@
         }
 
         html, body {
-            background-color: lightblue;
+            background-color: rgb(52, 58, 64);
         }
         th, td{
             border: 5px solid black;
@@ -39,48 +43,36 @@
     </style>
 </head>
 <body>
-<h2 class="text-center">What to wear.... here are the conditions in San Diego!!</h2>
+<h2 class="text-center" style = 'color: white' >Here's the forecast for the next 16 days!</h2>
 
 
-<table>
+
+<table class="table table-hover table-dark">
+    <thead>
 
     <tr>
-        <th>Conditions</th>
-        <th>Values</th>
+        <th scope="col">Temp</th>
+        <th scope="col">Conditions</th>
     </tr>
+    </thead>
+    {% for x in data %}
+    <tbody>
     <tr>
-        <td>Wind</td>
-        <td>{{myweather['wind']['speed']}}</td>
-    </tr>
-    <tr>
-        <td>Humidity</td>
-        <td>{{myweather['main']['humidity']}}</td>
-    </tr>
-    <tr>
-        <td>Feels Like</td>
-        <td>{{myweather['main']['feels_like']}}</td>
+        <td>{{x.temp * 1.0}}</td>
+        <td>{{x.weather.description}}</td>
 
     </tr>
-    <tr>
-        <td>Temperature</td>
-        <td>{{myweather['main']['temp']}}</td>
-
-    </tr>
-
+    </tbody>
+    {% endfor %}
 </table>
+
+
+
+
+
+{% endblock %}
 
 </body>
 </html>
 
 
-<br>
-<h2 class="text-center">Important Links</h2>
-<div class="container"></div>
-<div class="row justify-content-md-center" style="text-align: center; width: 100%">
-    <div class="col">
-        <a href="http://127.0.0.1:5000/experiment/" target="_blank" class="btn">Forecast (reached daily limit)</a>
-        <a href="http://127.0.0.1:5000/weatherapi/" target="_blank" class="btn">Forecast</a>
-        <a href="http://127.0.0.1:5000/planner3/" target="_blank" class="btn">Back To Planner</a>
-    </div>
-</div>
-</div>
